fixed spacing on about for mobile

--- a/source/styles/about.css
+++ b/source/styles/about.css
@@ -200,8 +200,22 @@ section#skills {
     
     .education-container > .school-name {
         justify-content: flex-start;
-        flex-wrap: nowrap;
+        -flex-wrap: nowrap;
     }
+
+    .education-container > .school-name::before {
+        flex: 0;
+    }
+
+    .education-container > .school-name  > strong {
+        flex: 1;
+    }
+
+    .education-container > .school-name  > span {
+        flex: 2;
+    }
+
+
 
     details {
         margin-top: 0.5em;
